# Atlas

./: .gitignore  Cargo.toml  README.md  TODO.md
LLM_STATE/core/: backlog.yaml  commits.yaml  dream-baseline  latest-session.yaml  memory.yaml  reflect-baseline  session-log.yaml  triage-baseline  work-baseline
crates/atlas-cli/: Cargo.toml  build.rs
crates/atlas-cli/src/: backend.rs  cache_io.rs  init.rs  lib.rs  main.rs  pipeline.rs  progress.rs  prompts.rs  timestamp.rs  validate.rs
crates/atlas-cli/tests/: agent_observer_e2e.rs  byte_identity_l5_demand.rs  cli_binary.rs  init_cmd.rs  pipeline_integration.rs  subsystems_integration.rs
crates/atlas-cli/tests/fixtures/tiny/mycli/: Cargo.toml  README.md
crates/atlas-cli/tests/fixtures/tiny/mycli/src/: main.rs
crates/atlas-cli/tests/fixtures/tiny/mylib/: Cargo.toml  README.md
crates/atlas-engine/: Cargo.toml  build.rs
crates/atlas-engine/src/: db.rs  defaults.rs  fixedpoint.rs  heuristics.rs  identifiers.rs  ingest.rs  l1_queries.rs  l2_candidates.rs  l3_classify.rs  l4_tree.rs  l5_surface.rs  l6_edges.rs  l7_structural.rs  l8_recurse.rs  l9_projections.rs  l9_subsystems.rs  lib.rs  llm_cache.rs  manifest_parse.rs  manifest_patterns.rs  progress.rs  prompt_migration.rs  prompt_token_coverage.rs  subcarve_policy.rs  surface_types.rs  types.rs
crates/atlas-engine/tests/: l0_l1_queries.rs  l2_l3_queries.rs  l4_tree.rs  l7_l8_fixedpoint.rs
crates/atlas-engine/tests/fixtures/mixed/: README.md
crates/atlas-engine/tests/fixtures/mixed/py-proj/: pyproject.toml
crates/atlas-engine/tests/fixtures/mixed/py-proj/src/pkg/: __init__.py
crates/atlas-engine/tests/fixtures/mixed/rust-proj/: Cargo.toml
crates/atlas-engine/tests/fixtures/monorepo-fragment/: README.md  package.json
crates/atlas-engine/tests/fixtures/monorepo-fragment/pkg-a/: package.json
crates/atlas-engine/tests/fixtures/monorepo-fragment/pkg-b/: package.json
crates/atlas-engine/tests/fixtures/monorepo-fragment/pkg-c/: package.json
crates/atlas-engine/tests/fixtures/tiny-rust-lib/: Cargo.toml  README.md
crates/atlas-index/: Cargo.toml
crates/atlas-index/src/: lib.rs
crates/atlas-llm/: Cargo.toml  README.md
crates/atlas-llm/src/: agent_observer.rs  budget.rs  claude_code.rs  codex.rs  codex_stream.rs  config.rs  http_anthropic.rs  http_openai.rs  lib.rs  prompt.rs  router.rs  stream_parse.rs  test_backend.rs  tool_use.rs
crates/atlas-llm/tests/fixtures/codex-stream/: README.md  simple-classify.jsonl  turn-failed.jsonl  with-tools.jsonl
crates/atlas-llm/tests/fixtures/stream/: README.md  error-max-turns.jsonl  simple-classify.jsonl  subcarve-with-tools.jsonl
defaults/: component-kinds.md  component-kinds.yaml
defaults/prompts/: classify.md  stage1-surface.md  stage2-edges.md  subcarve.md
docs/spikes/: 2026-05-02-l3-l8-prompt-shape-spike.md
docs/superpowers/plans/: 2026-05-01-agent-progress-feedback.md  2026-05-01-engine-progress-events.md  2026-05-01-subsystem-seeding.md  2026-05-02-multi-provider-llm-config.md
docs/superpowers/specs/: 2026-04-23-component-discovery-design.md  2026-05-01-agent-progress-feedback-design.md  2026-05-01-engine-progress-events-design.md  2026-05-01-subsystem-seeding-design.md  2026-05-02-codex-backend-research.md  2026-05-02-multi-provider-llm-config-design.md  2026-05-04-l8-map-reduce-design.md
evaluation/goldens/dev-workspace/: components.golden.yaml  external-components.golden.yaml  notes.md  related-components.golden.yaml
evaluation/harness/: Cargo.toml
evaluation/harness/src/: diff.rs  invariants.rs  lib.rs  report.rs  runner.rs
evaluation/harness/tests/: golden_parses.rs  smoke_test.rs
evaluation/invariants/: edge_participant_existence.rs  fixedpoint_termination.rs  manifest_coverage.rs  path_coverage.rs  rename_round_trip.rs
evaluation/results/: 2026-05-04-dull-depth0-perf.md
evaluation/results/2026-05-04-dull-no-pins/: components.yaml  external-components.yaml  llm-cache.json  notes.md  subsystems.yaml
scripts/: release-build.sh  release-publish.sh
scripts/templates/: atlas.rb.tmpl
website/: index.md  meta.yml
