[workspace]
resolver = "2"
members = [
    "crates/component-ontology",
    "crates/atlas-index",
    "crates/atlas-engine",
    "crates/atlas-llm",
    "crates/atlas-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linkuistics/Atlas"

[workspace.dependencies]
anyhow = "1"
ignore = "0.4"
salsa = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "1"

# Test-only deps shared by multiple crates.
regex = "1"
tempfile = "3"

[workspace.lints.rust]
warnings = "deny"
