[workspace]
resolver = "2"
members = [
    "crates/atlas-engine",
    "crates/atlas-llm",
    "crates/atlas-cli",
    "evaluation/harness",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linkuistics/Atlas"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
petgraph = "0.6"
salsa = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "1"

# Public data-format / vocabulary crates, hosted at linkuistics/atlas-contracts.
# Pinned by sha for reproducible builds — bump both revs in lockstep when the upstream repo advances.
component-ontology = { git = "https://github.com/linkuistics/atlas-contracts", rev = "337c54368eb1393f2c3f8839a5e9042ce72cf964" }
atlas-index = { git = "https://github.com/linkuistics/atlas-contracts", rev = "337c54368eb1393f2c3f8839a5e9042ce72cf964" }

# Test-only deps shared by multiple crates.
assert_cmd = "2"
predicates = "3"
regex = "1"
tempfile = "3"

[workspace.lints.rust]
warnings = "deny"
