[workspace]
resolver = "2"
members = [
  "crates/atlas-engine",
  "crates/atlas-llm",
  "crates/atlas-cli",
  "evaluation/harness",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linkuistics/Atlas"
version = "1.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
indicatif = "0.17"
petgraph = "0.6"
salsa = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "1"

# Public data-format / vocabulary crates, hosted at linkuistics/atlas-contracts.
# Local path deps during development so changes in ../atlas-contracts propagate to consumers
# without a commit/push round-trip. Before publishing, flip these to a git+rev pin (the upstream
# repo must be committed and pushed first) and revert after release.
component-ontology = { path = "../atlas-contracts/crates/component-ontology" }
atlas-index = { path = "../atlas-contracts/crates/atlas-index" }

# Test-only deps shared by multiple crates.
assert_cmd = "2"
predicates = "3"
regex = "1"
tempfile = "3"

[workspace.lints.rust]
warnings = "deny"
