[package]
name = "atlas-cli"
version.workspace = true
description = "Atlas CLI binary; command parsing, configuration, atomic file writes, driver for atlas-engine."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "atlas_cli"
path = "src/lib.rs"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
atlas-engine = { path = "../atlas-engine" }
atlas-index = { workspace = true }
atlas-llm = { path = "../atlas-llm" }
clap = { workspace = true }
component-ontology = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
atlas-llm = { path = "../atlas-llm" }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
