[package]
name = "atlas-engine"
version = "0.1.0"
description = "Salsa-backed query graph that drives Atlas's component-discovery fixedpoint."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
atlas-index = { path = "../atlas-index" }
atlas-llm = { path = "../atlas-llm" }
component-ontology = { path = "../component-ontology" }
ignore = { workspace = true }
salsa = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
