[package]
name = "atlas-engine"
version = "0.1.0"
description = "Salsa-backed query graph that drives Atlas's component-discovery fixedpoint."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
atlas-index = { workspace = true }
atlas-llm = { path = "../atlas-llm" }
component-ontology = { workspace = true }
ignore = { workspace = true }
petgraph = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
