[package]
name = "atlas-llm"
version = "0.1.0"
description = "LLM backend trait and implementations (claude-code subprocess; test backend) for Atlas."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
